# DAE-Programming2

./: .clang-format  .clang-tidy  .gitignore  1DAE25_Deraeve_Bram_Prog2Project.sln  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  build.txt  flake.nix  package.nix
CaveStoryPlus/: BarWidget.cpp  BarWidget.h  BatEnemy.cpp  BatEnemy.h  BlockEnemy.cpp  BlockEnemy.h  BossEnemy.cpp  BossEnemy.h  Bullet.cpp  Bullet.h  BulletManager.cpp  BulletManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CaveStoryPlus.vcxproj  CaveStoryPlus.vcxproj.filters  ChestInteractable.cpp  ChestInteractable.h  ColliderReader.cpp  ColliderReader.h  ColliderWriter.cpp  ColliderWriter.h  DecorInteractable.cpp  DecorInteractable.h  DialogEvent.h  DialogEvents.cpp  DialogEvents.h  DialogManager.cpp  DialogManager.h  DialogMessage.cpp  DialogMessage.h  Door.cpp  Door.h  DoorInteractable.cpp  DoorInteractable.h  DoorMimicEnemy.cpp  DoorMimicEnemy.h  Editor.cpp  Editor.h  (+63 more)
CaveStoryPlus/Resources/: cave_first_map.txt  cave_hermit_gunsmith_txt  mimiga_village_map.txt  mimiga_village_reservoir_map.txt  mimiga_village_shack_map.txt
Engine/: BaseGame.cpp  CMakeLists.txt  Engine.vcxproj  SoundStream.h  Texture.cpp  Texture.h  Vector2f.cpp  Vector2f.h  base.h  structs.cpp  structs.h  utils.cpp  utils.h
Libraries/SDLMain/SDL2-2.30.11/include/: SDL_endian.h
images_&_spritesheets/maps/: cave_first_map_outline.xcf
